# Robomaster2019

./: CMakeLists.txt  MV-UB31-Group0.config  main.cpp
MVCamera/include/: CameraApi.h  CameraDefine.h  CameraStatus.h  MVCamera.h  Timer.h
MVCamera/src/: 027181010017.mvdat  MVCamera.cpp  main.cpp  test_MVCamera.cpp
TargetCarDetector/: main.cpp
TargetCarDetector/config/: marker_config.yml
TargetCarDetector/include/: Params.h  TargetCarDetector.h  Timer.h
TargetCarDetector/src/: Params.cpp  TargetCarDetector.cpp
include/: .Mutilprocess.hpp.kate-swp  Mutilprocess.hpp  RemoteControl.h  RoboMasterProcess.h  can.h  communicator.h  main.h  setting.h  uart.h
scripts/: rc.local
src/: RemoteControl.cpp  RoboMasterProcess.cpp  can.cpp  uart.cpp  uart.cpp.bkp
